# banking-transactions-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.py  docker-compose.yaml  example.secrets.toml  main.py  pyproject.toml  settings.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: a09e25994399_create_bank_accounts_and_transactions_.py  a2a2e2f19fc7_create_bank_accounts_table.py
src/adapters/: databases.py
src/adapters/orm/: models.py
src/domains/: bank_account.py  transaction.py
src/enums/: transactions_types.py
src/infra/: bank_account.py  exceptions.py  transaction.py
src/routers/v1/: __init__.py  bank_account.py  bank_accounts.py  transactions.py
src/schemas/: __init__.py  bank_account.py  exceptions.py  transaction.py
src/scripts/: simulate_transactions.py
src/services/: bank_account.py  exceptions.py  transaction.py
src/utils/: set_datetime.py
tests/: conftest.py
tests/domains/: test_bank_account.py
tests/infra/: test_bank_account.py
tests/routers/: test_bank_account.py
tests/services/: test_bank_account.py
