[tool.poetry]
name = "banking-transactions-api"
version = "0.1.0"
description = ""
authors = ["Kaique Moreira <moreirak14>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}
dynaconf = "^3.2.6"
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
