[tool.poetry]
name = "banking-transactions-api"
version = "0.1.0"
description = ""
authors = ["Kaique Moreira <moreirak14>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}
dynaconf = "^3.2.6"
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.24.0"


[tool.ruff]
line-length = 79
lint.ignore = ["SIM118"]
lint.select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 79


[tool.pytest.ini_options]
addopts = [
    "--cov=./src",
    "--cov-report=html",
    "--cov-fail-under=50",
    "--color=yes",
    "-vv",
]
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"